k8s-rpi-apps-argocd/05-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress
  annotations:
    kubernetes.io/ingress.class: traefik  
    avp.kubernetes.io/path: "k8secrets/argocd"    
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`<argocdhostname>`)
    kind: Rule
    services:
    - name: argocd-server
      port: 80
  tls:
    certResolver: godaddy
    domains:
    - main: <argocddomainname>
